syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "/grpc";

message Caller {
  string func_name = 1;
  string source = 2;
}

message Log {
  google.protobuf.Timestamp timestamp = 1;
  string trace_id = 2;
  string msg = 3;
  string tag = 4;
  repeated Caller caller = 5;
  string level = 6;
  map<string, string> extra = 7;
}

message LogBatch {
  repeated Log logs = 1;
}

service LogService {
  rpc SendLogs(LogBatch) returns (google.protobuf.Empty);
}
